Display changes for mac, Dynamic window size base on user's screen size, Load and Quit buttons where hidden

--- a/annotation_mac_os.ipynb
+++ b/annotation_mac_os.ipynb
@@ -73,18 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Orientation angle: -48.92388932275294 degrees\n",
-      "Modified image saved as result/img_2398.png\n",
-      "Modified image saved as result/img_2398.png\n",
-      "Modified image saved as result/img_2398.png\n",
-      "Modified image saved as result/img_2398.png\n"
+      "Orientation angle: 0.0 degrees\n",
+      "Orientation angle: 173.6598082540901 degrees\n",
+      "Orientation angle: 179.62305952040288 degrees\n",
+      "Orientation angle: 0.0 degrees\n"
      ]
     }
    ],
@@ -103,7 +102,10 @@
     "    def __init__(self, root):\n",
     "        self.root = root\n",
     "        self.root.title(\"Image Annotation Tool\")\n",
-    "        \n",
+    "\n",
+    "        # Make the root window resizable\n",
+    "        self.root.resizable(True, True)\n",
+    "\n",
     "        # Variables\n",
     "        self.annotations = []\n",
     "        self.image_index = 0\n",
@@ -121,7 +123,7 @@
     "        self.display_factor = 2.0  # Factor for high-resolution display (scales images down by 2)\n",
     "        self.original_image_size = (1624, 1234)  # Fixed aspect ratio\n",
     "        self.selecting_orientation = True  # Switch between orientation and rectangle drawing\n",
-    "        self.step_message = \"Load your images by clicking on Load Images \\n Navigate to the folder containing the images for labeling and select the folder (ensure you're inside).\"\n",
+    "        self.step_message = \"Load your images by clicking on Load Images \\nNavigate to the folder containing the images for labeling and select the folder (ensure you're inside).\"\n",
     "\n",
     "        self.modified_image = None  # For storing the modified image with drawings\n",
     "        self.position = 1  # Position in the current image\n",
@@ -142,54 +144,75 @@
     "    # ==================================== GUI LAYOUT ====================================\n",
     "\n",
     "    def setup_layout(self):\n",
-    "        # Image name label\n",
-    "        self.image_name_label = tk.Label(self.root, text=\"Image: \", font=('Helvetica', 16))\n",
-    "        self.image_name_label.grid(row=0, column=0, columnspan=2, padx=10, pady=10, sticky=\"nsew\")\n",
+    "        # Configure grid weights for root window\n",
+    "        self.root.grid_rowconfigure(0, weight=1)\n",
+    "        self.root.grid_columnconfigure(0, weight=3)  # Image column\n",
+    "        self.root.grid_columnconfigure(1, weight=1)  # Controls column\n",
     "\n",
     "        # Canvas for image display\n",
-    "        self.canvas_frame = tk.Frame(self.root, width=800, height=600, bg=\"grey\")\n",
-    "        self.canvas_frame.grid(row=1, column=0, padx=10, pady=10, columnspan=2, sticky=\"nsew\")\n",
-    "        self.canvas = tk.Canvas(self.canvas_frame, cursor=\"cross\", width=800, height=600, bg=\"black\")\n",
-    "        self.canvas.pack(fill=\"both\", expand=True)\n",
+    "        self.canvas = tk.Canvas(self.root, cursor=\"cross\", bg=\"black\")\n",
+    "        self.canvas.grid(row=0, column=0, sticky=\"nsew\")\n",
     "        self.canvas.bind(\"<ButtonPress-1>\", self.on_button_press)\n",
     "        self.canvas.bind(\"<B1-Motion>\", self.on_move_press)\n",
     "        self.canvas.bind(\"<ButtonRelease-1>\", self.on_button_release)\n",
     "\n",
+    "        # Right-side frame for controls and labels\n",
+    "        self.right_frame = tk.Frame(self.root)\n",
+    "        self.right_frame.grid(row=0, column=1, sticky=\"nsew\", padx=10, pady=10)\n",
+    "        self.right_frame.grid_rowconfigure(4, weight=1)  # Make CSV frame expandable\n",
+    "        self.right_frame.grid_columnconfigure(0, weight=1)\n",
+    "\n",
+    "        # Image name label\n",
+    "        self.image_name_label = tk.Label(self.right_frame, text=\"Image: \", font=('Helvetica', 16))\n",
+    "        self.image_name_label.grid(row=0, column=0, padx=10, pady=5, sticky=\"ew\")\n",
+    "\n",
     "        # Step label\n",
-    "        self.step_label = tk.Label(self.root, text=self.step_message, font=('Helvetica', 14))\n",
-    "        self.step_label.grid(row=2, column=0, columnspan=2, padx=10, pady=10)\n",
-    "\n",
-    "        # CSV frame and display\n",
-    "        self.csv_frame = tk.Frame(self.root, width=400, height=600)\n",
-    "        self.csv_frame.grid(row=1, column=2, padx=20, sticky=\"nsew\")\n",
-    "        self.csv_label = tk.Label(self.csv_frame, text=\"CSV Content (Real-Time):\", font=('Helvetica', 16))\n",
-    "        self.csv_label.pack()\n",
-    "        self.csv_textbox = tk.Text(self.csv_frame, width=40, height=20, font=('Helvetica', 10))\n",
-    "        self.csv_textbox.pack(fill=\"both\", expand=True)\n",
-    "\n",
-    "        # Controls Frame\n",
-    "        self.controls_frame = tk.Frame(self.root)\n",
-    "        self.controls_frame.grid(row=3, column=0, columnspan=2, pady=10)\n",
-    "\n",
-    "        # Buttons\n",
-    "        self.prev_button = tk.Button(self.controls_frame, text=\"Previous Image\", command=self.prev_image, font=('Helvetica', 14))\n",
-    "        self.next_button = tk.Button(self.controls_frame, text=\"Next Image\", command=self.next_image, font=('Helvetica', 14))\n",
-    "        self.prev_button.grid(row=0, column=0, padx=20, pady=10)\n",
-    "        self.next_button.grid(row=0, column=1, padx=20, pady=10)\n",
-    "\n",
-    "        self.load_button = tk.Button(self.controls_frame, text=\"Load Images\", command=self.load_images, font=('Helvetica', 14))\n",
-    "        self.load_button.grid(row=1, column=0, columnspan=2, padx=10, pady=20)\n",
-    "\n",
-    "        self.quit_button = tk.Button(self.controls_frame, text=\"Quit\", command=self.root.destroy, font=('Helvetica', 14))\n",
-    "        self.quit_button.grid(row=2, column=0, columnspan=2, pady=10)\n",
-    "\n",
-    "        # Status message\n",
-    "        self.status_message = tk.Label(self.controls_frame, text=\"\", font=('Helvetica', 16))\n",
-    "        self.status_message.grid(row=3, column=0, columnspan=2, padx=10, pady=10)\n",
+    "        self.step_label = tk.Label(self.right_frame, text=self.step_message, font=('Helvetica', 14), wraplength=300, justify=\"left\")\n",
+    "        self.step_label.grid(row=1, column=0, padx=10, pady=5, sticky=\"ew\")\n",
     "\n",
     "        # Instruction text for zoom and navigation\n",
-    "        self.instructions_label = tk.Label(self.root, text=\"Instructions:\\n- Use the + key to zoom in\\n- Use the - key to zoom out\\n- Use arrow keys to move the image\", font=('Helvetica', 12), justify=\"left\")\n",
-    "        self.instructions_label.grid(row=2, column=2, padx=20, pady=10, sticky=\"nsew\")\n",
+    "        self.instructions_label = tk.Label(\n",
+    "            self.right_frame,\n",
+    "            text=\"Instructions:\\n- Use the + key to zoom in\\n- Use the - key to zoom out\\n- Use arrow keys to move the image\",\n",
+    "            font=('Helvetica', 12),\n",
+    "            justify=\"left\",\n",
+    "            wraplength=300\n",
+    "        )\n",
+    "        self.instructions_label.grid(row=2, column=0, padx=10, pady=5, sticky=\"ew\")\n",
+    "\n",
+    "        # Controls Frame\n",
+    "        self.controls_frame = tk.Frame(self.right_frame)\n",
+    "        self.controls_frame.grid(row=3, column=0, pady=10, sticky=\"ew\")\n",
+    "        self.controls_frame.columnconfigure(0, weight=1)\n",
+    "        self.controls_frame.columnconfigure(1, weight=1)\n",
+    "\n",
+    "        # Buttons\n",
+    "        self.load_button = tk.Button(self.controls_frame, text=\"Load Images\", command=self.load_images, font=('Helvetica', 14))\n",
+    "        self.load_button.grid(row=0, column=0, padx=5, pady=5, sticky=\"ew\")\n",
+    "\n",
+    "        self.quit_button = tk.Button(self.controls_frame, text=\"Quit\", command=self.root.destroy, font=('Helvetica', 14))\n",
+    "        self.quit_button.grid(row=0, column=1, padx=5, pady=5, sticky=\"ew\")\n",
+    "\n",
+    "        self.prev_button = tk.Button(self.controls_frame, text=\"Previous Image\", command=self.prev_image, font=('Helvetica', 14))\n",
+    "        self.next_button = tk.Button(self.controls_frame, text=\"Next Image\", command=self.next_image, font=('Helvetica', 14))\n",
+    "        self.prev_button.grid(row=1, column=0, padx=5, pady=5, sticky=\"ew\")\n",
+    "        self.next_button.grid(row=1, column=1, padx=5, pady=5, sticky=\"ew\")\n",
+    "\n",
+    "        # Status message\n",
+    "        self.status_message = tk.Label(self.right_frame, text=\"\", font=('Helvetica', 12), fg=\"green\", wraplength=300, justify=\"left\")\n",
+    "        self.status_message.grid(row=5, column=0, padx=10, pady=5, sticky=\"ew\")\n",
+    "\n",
+    "        # CSV frame and display\n",
+    "        self.csv_frame = tk.Frame(self.right_frame)\n",
+    "        self.csv_frame.grid(row=4, column=0, padx=10, pady=5, sticky=\"nsew\")\n",
+    "        self.csv_frame.grid_rowconfigure(1, weight=1)\n",
+    "        self.csv_frame.grid_columnconfigure(0, weight=1)\n",
+    "\n",
+    "        self.csv_label = tk.Label(self.csv_frame, text=\"CSV Content (Real-Time):\", font=('Helvetica', 16))\n",
+    "        self.csv_label.grid(row=0, column=0, sticky=\"ew\")\n",
+    "\n",
+    "        self.csv_textbox = tk.Text(self.csv_frame, font=('Helvetica', 10))\n",
+    "        self.csv_textbox.grid(row=1, column=0, sticky=\"nsew\")\n",
     "\n",
     "    # ==================================== IMAGE RELATED FUNCTIONS ====================================\n",
     "    \n",
@@ -201,7 +224,7 @@
     "            return\n",
     "        \n",
     "        # Load all image files with supported extensions\n",
-    "        self.image_files = [f for f in os.listdir(self.image_folder) if f.endswith(('png', 'jpg', 'jpeg'))]\n",
+    "        self.image_files = [f for f in os.listdir(self.image_folder) if f.lower().endswith(('png', 'jpg', 'jpeg'))]\n",
     "        \n",
     "        if self.image_files:\n",
     "            # Automatically start from the first image\n",
@@ -211,6 +234,7 @@
     "            self.status_message.config(text=f\"{len(self.image_files)} images loaded.\", fg=\"green\")\n",
     "            self.step_message = \"Draw a line from the center of the leftmost digit to the center of the rightmost digit to indicate orientation\"\n",
     "            self.step_label.config(text=self.step_message)\n",
+    "            self.image_name_label.config(text=f\"Image: {self.current_image}\")\n",
     "        else:\n",
     "            self.status_message.config(text=\"No images found!\", fg=\"red\")\n",
     "\n",
@@ -218,12 +242,12 @@
     "        # Display the image at full size and prepare for modifications\n",
     "        image_path = os.path.join(self.image_folder, image_name)\n",
     "        img = Image.open(image_path)\n",
-    "         # Resize the image based on display factor\n",
+    "        # Resize the image based on display factor\n",
     "        new_width, new_height = int(img.width / self.display_factor), int(img.height / self.display_factor)\n",
     "        img_resized = img.resize((new_width, new_height), Image.LANCZOS)\n",
     "\n",
     "        self.original_image = img  # Make a copy to preserve original\n",
-    "        self.modified_image = img_resized  # Use this to draw directly on the image\n",
+    "        self.modified_image = img_resized.copy()  # Use this to draw directly on the image\n",
     "\n",
     "        self.update_zoomed_image()\n",
     "\n",
@@ -237,7 +261,9 @@
     "            self.position = 1  # Reset position for new image\n",
     "            self.step_message = \"Draw a line from the center of the leftmost digit to the center of the rightmost digit to indicate orientation\"\n",
     "            self.step_label.config(text=self.step_message)\n",
+    "            self.status_message.config(text=\"\")\n",
     "            self.display_image(self.current_image)\n",
+    "            self.image_name_label.config(text=f\"Image: {self.current_image}\")\n",
     "\n",
     "    def prev_image(self):\n",
     "        if self.image_index > 0:\n",
@@ -248,7 +274,9 @@
     "            self.position = 1  # Reset position for new image\n",
     "            self.step_message = \"Draw a line from the center of the leftmost digit to the center of the rightmost digit to indicate orientation\"\n",
     "            self.step_label.config(text=self.step_message)\n",
+    "            self.status_message.config(text=\"\")\n",
     "            self.display_image(self.current_image)\n",
+    "            self.image_name_label.config(text=f\"Image: {self.current_image}\")\n",
     "\n",
     "    def update_zoomed_image(self):\n",
     "        # Update the image display based on zoom level\n",
@@ -389,7 +417,7 @@
     "            if messagebox.askyesno(\"Validate\", \"Do you want to keep this line?\"):\n",
     "                self.selecting_orientation = False\n",
     "                self.status_message.config(text=\"\")\n",
-    "                self.step_message = \"Now draw a rectangle around the digit, ensuring they are ordered correctly (reading order), \\n for each one of them start for the top left corner, regardless of the orientation.\"\n",
+    "                self.step_message = \"Now draw a rectangle around the digit, ensuring they are ordered correctly (reading order). For each one, start from the top-left corner, regardless of the orientation.\"\n",
     "                self.step_label.config(text=self.step_message)\n",
     "            else:\n",
     "                self.canvas.delete(self.line)\n",
@@ -420,8 +448,9 @@
     "                    font = ImageFont.load_default()\n",
     "                draw.text((text_x, text_y), label, fill=\"red\", font=font)\n",
     "                self.record_annotation(label, rect_coords)\n",
-    "                self.step_message = \"Rectangle saved! Draw the next one or if you are done go to the next image.\"\n",
+    "                self.step_message = \"Rectangle saved! Draw the next one or if you are done, go to the next image.\"\n",
     "                self.step_label.config(text=self.step_message)\n",
+    "                self.status_message.config(text=f\"Saved label '{label}' at position {self.position - 1}.\", fg=\"green\")\n",
     "            else:\n",
     "                messagebox.showwarning(\"Invalid Input\", \"Please enter a valid number!\")\n",
     "                self.canvas.delete(self.rect)\n",
@@ -480,7 +509,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_labeling",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
