--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,11 +1720,46 @@
    "source": [
     "Using the matrix and plot above, we can confirm that the first charcater is always the number '5' and that the third character is always the number '3' (probability of 1). We can also see that the second and fourth charcater are with a probability of 98% the number '5' and '8' respectively. We can also note that the number '0' occures with a high probability in position 8. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion on the analysis :\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This analysis provides valuable insights for developping an automatic label reader system for steel billets. Key findings include:\n",
+    "\n",
+    "**Strong positional patterns in label numbers:**\n",
+    "- Position 1: Always '5'\n",
+    "- Position 2: 98% probability of '5'\n",
+    "- Position 3: Always '8'\n",
+    "- Position 4: 98% probability of '6'\n",
+    "- Position 8: High probability of '0'\n",
+    "\n",
+    "**These patterns can be used to:**\n",
+    "\n",
+    "* Optimize the reading zones by focusing on areas with high-confidence digit positions\n",
+    "* Implement a probability-based validation system that flags unusual digit placements\n",
+    "* Add warning alerts when the OCR detects digits in positions where they rarely occur\n",
+    "* Use position-specific character recognition models trained on the most common digits for each position\n",
+    "\n",
+    "These improvements could significantly enhance the accuracy and reliability of the automatic label reading system while reducing false positives through probability-based validation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ada",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1738,7 +1773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
